--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "rollup-plugin-visualizer": "^5.9.0",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
   }
